XIVYWF-2 Fix sources, use primefaces

--- a/workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -1,60 +1,30 @@
-<div class="layout-sidebar">
-  <div class="sidebar-logo">
-    <a href="/">
-      <img src="../faces/javax.faces.resource/images/axon_ivy_logo_white.svg" alt="Axon.ivy"/>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core"
+  xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui"
+  xmlns:pm="http://primefaces.org/serenity-ivy">
+  <div class="layout-sidebar">
+    <div class="sidebar-logo">
+    <a href="/"> 
+      <img src="#{resource['images/axon_ivy_logo_white.svg']}" alt="Axon.ivy" />
     </a>
   </div>
   <div class="nano container has-scrollbar">
     <div class="nano-content sidebar-scroll-content" tabindex="0" style="margin-right: -16px;">
       <div class="layout-menu-container">
-        <ul id="menuform" class="layout-menu">
-          <li id="menuform:home" role="menuitem">
-            <a class="ripplelink" href="home.xhtml">
-              <i class="material-icons">home</i><!-- <span class="menuitem-text">Home</span> -->
-            </a>
-          </li>
-          <li id="menuform:my-tasks" role="menuitem">
-            <a class="ripplelink" href="tasks.xhtml">
-              <i class="material-icons">format_list_bulleted</i><span class="menuitem-text">Tasks</span>
-            </a>
-          </li>
-          <li id="menuform:my-prcesses" role="menuitem">
-            <a class="ripplelink" href="starts.xhtml">
-              <i class="material-icons">menu</i><span class="menuitem-text">Starts</span>
-            </a>
-          </li>
-          <li id="menuform:all-tasks" role="menuitem">
-            <a class="ripplelink" href="../wf/?pageId=tasklist">
-              <i class="material-icons">history</i><span class="menuitem-text">All cases and tasks</span>
-            </a>
-          </li>
-          <li id="menuform:dev" role="menuitem">
-            <a href="#" class="ripplelink">
-              <i class="material-icons">build</i><span class="menuitem-text">Actions</span><i class="material-icons layout-submenu-toggler">keyboard_arrow_up</i>
-            </a>
-            <ul role="menu">
-              <li id="menuform:signals" role="menuitem">
-                <a class="ripplelink" href="../wf/?pageId=signals">
-                  <i class="material-icons">signal_cellular_4_bar</i>
-                  <span class="menuitem-text">Signals</span>
-                </a>
-              </li>
-              <li id="menuform:intermediate-events" role="menuitem">
-                <a class="ripplelink" href="../wf/?pageId=intermediateElements">
-                  <i class="material-icons">trending_down</i>
-                  <span class="menuitem-text">Intermediate Events</span>
-                </a>
-              </li>
-              <li id="menuform:cleanup" role="menuitem">
-                <a class="ripplelink" href="../wf/?pageId=cleanup">
-                  <i class="material-icons">not_interested</i>
-                  <span class="menuitem-text">Cleanup</span>
-                </a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <script id="menuform" type="text/javascript">PrimeFaces.cw("Serenity","menu",{id:"menuform:j_id_g",closeDelay:"250"});</script>
+        <h:form id="menuform">
+          <pm:menu widgetVar="sidebar_menu">
+            <p:menuitem id="sr_home" icon="home" url="home.xhtml" />
+            <p:menuitem id="sr_tasks" value="Tasks" icon="format_list_bulleted" url="tasks.xhtml" />
+            <p:menuitem id="sr_starts" value="Starts" icon="menu" url="starts.xhtml" />
+            <p:menuitem id="sr_tasks_cases" value="All Tasks and Cases" icon="history" url="#" />
+
+            <p:submenu id="sr_actions" label="Actions" icon="build">
+              <p:menuitem id="sr_signals" value="Signals" icon="signal_cellular_4_bar" url="#" />
+              <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="trending_down" url="#" />
+              <p:menuitem id="sr_cleanup" value="Cleanup" icon="not_interested" url="#" />
+            </p:submenu>
+          </pm:menu>
+        </h:form>
+        <script id="menuform" type="text/javascript">PrimeFaces.cw("Serenity", "menu", {id : "menuform:j_id_g",closeDelay : "250"});</script>
       </div>
     </div>
     <div class="nano-pane" style="display: block;">
@@ -62,3 +32,4 @@
     </div>
   </div>
 </div>
+</ui:composition>
