--- a/workflow-ui/webContent/includes/template/template.xhtml
+++ b/workflow-ui/webContent/includes/template/template.xhtml
@@ -21,11 +21,9 @@
 	<h:outputStylesheet name="css/layout-ivy-designer.css"
 		library="serenity-layout" />
 	<h:outputStylesheet name="css/cockpit.css" library="serenity-layout" />
-	<h:outputStylesheet name="wf/layouts/styles/horizontal-container.css" />
-	<h:outputStylesheet name="wf/styles/Responsive.css" />
+	<h:outputStylesheet name="resources/workflow-layout/horizontal-container.css" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 		rel="stylesheet" />
-	<link href="../css/horizontal-container.css" rel="stylesheet" />
 	<title><ui:insert name="title">#{ivyAdvisor.applicationName} #{ivyAdvisor.versionShort}</ui:insert></title>
 	<link rel="shortcut icon" href="#{resource['images/ivy_favicon_48.png']}" />
 </h:head>
@@ -35,14 +33,11 @@
 		<ui:include src="./sidebar.xhtml" />
 		<div class="layout-main">
 			<ui:include src="./topbar.xhtml" />
-			<div class="layout-breadcrumb" style="min-height: 0px;">
+			<div class="layout-breadcrumb" style="min-height: 0px;"></div>
 				<div class="layout-content container">
 					<ui:insert name="content" />
 				</div>
-			</div>
 		</div>
 	</div>
-
-
 </h:body>
 </html>
