XIVYWF-2 remove not working urls

--- a/workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/workflow-ui/webContent/includes/template/topbar.xhtml
@@ -22,12 +22,12 @@
           </a>
           <ul class="animated" style="right: 5px">
             <li role="menuitem">
-              <a id="login" href="../../wf/?pageId=login" class="ui-commandlink ui-widget">
+              <a id="login" href="#" class="ui-commandlink ui-widget">
                 <i class="material-icons">vpn_key</i><span>Login</span>
               </a>
             </li>
             <li role="menuitem">
-              <a id="sessionLogoutBtn" href="../../wf/logout.jsp" class="ui-commandlink ui-widget"
+              <a id="sessionLogoutBtn" href="#" class="ui-commandlink ui-widget"
                 jsf:rendered="#{!ivyJsfWfHelper.sessionUserUnknown}">
                 <i class="material-icons">power_settings_new</i><span>Logout</span>
               </a>
