--- a/workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -3,29 +3,28 @@
   xmlns:pm="http://primefaces.org/serenity-ivy">
   <div class="layout-sidebar">
     <div class="sidebar-logo">
-    <a href="/"> 
-      <img src="#{resource['images/axon_ivy_logo_white.svg']}" alt="Axon.ivy" />
-    </a>
-  </div>
-  <div class="nano container has-scrollbar">
-    <div class="nano-content sidebar-scroll-content" tabindex="0" style="margin-right: -16px;">
-      <div class="layout-menu-container">
-        <h:form id="menuform">
-          <pm:menu widgetVar="sidebar_menu">
-            <p:menuitem id="sr_home" icon="home" url="home.xhtml" />
-            <p:menuitem id="sr_tasks" value="Tasks" icon="format_list_bulleted" url="tasks.xhtml" />
-            <p:menuitem id="sr_starts" value="Starts" icon="menu" url="starts.xhtml" />
-            <p:menuitem id="sr_tasks_cases" value="All Tasks and Cases" icon="history" url="#" />
+      <a href="/"> <img src="#{resource['images/axon_ivy_logo_white.svg']}" alt="Axon.ivy" />
+      </a>
+    </div>
+    <div class="nano container has-scrollbar">
+      <div class="nano-content sidebar-scroll-content" tabindex="0" style="margin-right: -16px;">
+        <div class="layout-menu-container">
+          <h:form id="menuform">
+            <pm:menu widgetVar="sidebar_menu">
+              <p:menuitem id="sr_home" icon="home" url="home.xhtml" />
+              <p:menuitem id="sr_tasks" value="Tasks" icon="format_list_bulleted" url="tasks.xhtml" />
+              <p:menuitem id="sr_starts" value="Starts" icon="menu" url="starts.xhtml" />
+              <p:menuitem id="sr_tasks_cases" value="All Tasks and Cases" icon="history" url="#" />
 
-            <p:submenu id="sr_actions" label="Actions" icon="build">
-              <p:menuitem id="sr_signals" value="Signals" icon="signal_cellular_4_bar" url="#" />
-              <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="trending_down" url="#" />
-              <p:menuitem id="sr_cleanup" value="Cleanup" icon="not_interested" url="#" />
-            </p:submenu>
-          </pm:menu>
-        </h:form>
+              <p:submenu id="sr_actions" label="Actions" icon="build">
+                <p:menuitem id="sr_signals" value="Signals" icon="signal_cellular_4_bar" url="#" />
+                <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="trending_down" url="#" />
+                <p:menuitem id="sr_cleanup" value="Cleanup" icon="not_interested" url="#" />
+              </p:submenu>
+            </pm:menu>
+          </h:form>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </ui:composition>
