--- a/workflow-ui/webContent/includes/components/tasksTable.xhtml
+++ b/workflow-ui/webContent/includes/components/tasksTable.xhtml
@@ -1,14 +1,11 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-  xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
-  xmlns:pe="http://primefaces.org/ui/extensions">
-<h:body>
-  <ui:composition template="../includes/template/template.xhtml">
-    <ui:define name="content">
-    <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}"/>
-     <h:form id="tasksForm" style="margin-top: 20px">
-    <h:outputText value="Personal Tasks" style="font-size:16pt; font-weight:bold" />
-    <p:dataTable id="tasks" var="task" value="#{tasksBean.getPersonalTasks()}" widgetVar="tasksTable"
+  xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
+  xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+  <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}"/>
+  <h:form id="tasksForm" style="margin-top: 20px">
+    <h:outputText value="All Tasks" style="font-size:16pt; font-weight:bold" />
+    <p:dataTable id="tasks" var="task" value="#{tasksBean.getTasks()}" widgetVar="tasksTable"
       emptyMessage="No Tasks found with given criteria" style="margin-top:10px">
 
       <f:facet name="header">
@@ -35,6 +32,10 @@
         <p:tooltip for="taskName" value="Task ID: #{task.getId()}" position="top" />
       </p:column>
 
+      <p:column headerText="Responsible" filterBy="#{task.getActivator()}">
+        <h:outputText value="#{task.getActivator().getName()}" />
+      </p:column>
+
       <p:column headerText="Start Date" style="text-align: center;">
         <h:outputText value="#{tasksBean.getPrettyTime(task.getStartTimestamp())}" />
       </p:column>
@@ -51,8 +52,4 @@
       </p:column>
     </p:dataTable>
   </h:form>
-    </ui:define>
-  </ui:composition>
-</h:body>
-
-</html>
+</ui:composition>
