--- a/workflow-ui/webContent/view/allTasksAndCases.xhtml
+++ b/workflow-ui/webContent/view/allTasksAndCases.xhtml
@@ -2,10 +2,10 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:ic="http://ivyteam.ch/jsf/component" xmlns:p="http://primefaces.org/ui"
   xmlns:pe="http://primefaces.org/ui/extensions">
-
 <h:body>
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
+    <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}" />
     <h:form id="tasksForm" style="margin-top: 20px">
       <h:outputText value="All Tasks" style="font-size:16pt; font-weight:bold" />
       <ui:include src="/includes/components/tasksTable.xhtml" />
