XIVYWF-11 Update to the newest API and adjust code

--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -27,9 +27,9 @@
                   <a href="#{start.link.relative}" id="start-link" class="flex-space">
                     <span class="straight-text-icon">
                       <i class="material-icons">play_circle_filled</i>
-                      <span>#{start.getUserFriendlyRequestPath()}</span>
+                      <span>#{start.getDisplayName()}</span>
                     </span>
-                    <span>#{start.getName()}</span>
+                    <span>#{start.getDescription()}</span>
                   </a>
                 </p:panel>
               </ui:repeat>
