--- a/workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/workflow-ui/webContent/includes/components/userTable.xhtml
@@ -21,7 +21,7 @@
 
       <p:column headerText="Username" filterBy="#{user.name}" filterStyle="display: none">
         <h:outputText value="#{user.name}" >
-        <i class="material-icons table-icon">person</i>
+        <i class="si si-single-neutral-actions table-icon"></i>
         </h:outputText>
       </p:column>
 
@@ -34,7 +34,7 @@
       </p:column>
 
       <p:column width="64">
-        <i class="material-icons">login</i>
+        <i class="si si-lg si-login-3"></i>
       </p:column>
 
     </p:dataTable>
