--- a/workflow-ui/webContent/view/login.xhtml
+++ b/workflow-ui/webContent/view/login.xhtml
@@ -48,7 +48,7 @@
           </div>
           <div class="ui-g-12">
             <p:commandButton update="@form" id="login" actionListener="#{loginBean.customLogin}" value="Sign In"
-              icon="ui-icon-person" />
+              icon="si si-login-3" />
           </div>
         </div>
       </h:form>
