--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -26,7 +26,7 @@
                 <p:panel styleClass="start-element" rendered="#{pmv.active}">
                   <h:commandLink action="#{processesBean.executeStart(start.link.relative)}" id="start-link" class="flex-space">
                     <span class="straight-text-icon">
-                      <i class="material-icons">play_circle_filled</i>
+                      <i class="si si-controls-play" style="padding-right: 8px"></i>
                       <span>#{start.getDisplayName()}</span>
                     </span>
                     <span>#{start.getDescription()}</span>
