--- a/workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -11,15 +11,15 @@
         <div class="layout-menu-container">
           <h:form id="menuform">
             <pm:menu widgetVar="sidebar_menu">
-              <p:menuitem id="sr_home" icon="home" url="home.xhtml" />
-              <p:menuitem id="sr_tasks" value="Tasks" icon="format_list_bulleted" url="tasks.xhtml" />
-              <p:menuitem id="sr_starts" value="Starts" icon="menu" url="starts.xhtml" />
-              <p:menuitem id="sr_tasks_cases" value="All Tasks and Cases" icon="history" url="allTasksAndCases.xhtml" rendered="#{adminBean.isWorkflowAdmin()}"/>
+              <p:menuitem id="sr_home" icon="si si-house-1" url="home.xhtml" />
+              <p:menuitem id="sr_tasks" value="Tasks" icon="si si-layout-bullets" url="tasks.xhtml" />
+              <p:menuitem id="sr_starts" value="Starts" icon="si si-navigation-menu" url="starts.xhtml" />
+              <p:menuitem id="sr_tasks_cases" value="All Tasks and Cases" icon="si si-task-list-approve" url="allTasksAndCases.xhtml" rendered="#{adminBean.isWorkflowAdmin()}"/>
 
-              <p:submenu id="sr_actions" label="Actions" icon="build">
-                <p:menuitem id="sr_signals" value="Signals" icon="signal_cellular_4_bar" url="#" />
-                <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="trending_down" url="#" />
-                <p:menuitem id="sr_cleanup" value="Cleanup" icon="not_interested" url="#" />
+              <p:submenu id="sr_actions" label="Actions" icon="si si-tools-wench">
+                <p:menuitem id="sr_signals" value="Signals" icon="si si-network-signal" url="#" />
+                <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="si si-analytics-graph" url="#" />
+                <p:menuitem id="sr_cleanup" value="Cleanup" icon="si si-delete" url="#" />
               </p:submenu>
             </pm:menu>
           </h:form>
