--- a/workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/workflow-ui/webContent/includes/template/topbar.xhtml
@@ -7,36 +7,30 @@
         <h:graphicImage name="resources/images/axon_ivy_logo_white.svg" alt="Axon.ivy" />
       </a>
     </div>
-    <a href="#" class="menu-btn">
-      <i class="material-icons">menu</i>
-    </a>
-    <a href="#" class="topbar-menu-btn">
-      <i class="material-icons">&#xE853;</i>
-    </a>
     <div class="layout-topbar-menu-wrapper">
       <ul class="topbar-menu animated">
         <li id="sessionUser" class="profile-item">
           <a href="#">
-            <span class="profile-image-wrapper"> <i class="material-icons" style="font-size: 40px;">account_circle</i>
+            <span class="profile-image-wrapper"> <i class="si si-single-neutral-circle" style="font-size: 36px; padding: 2px"></i>
             </span> <span id="sessionUserName" class="topbar-item-name profile-name">#{ivyJsfWfHelper.currentUserName}</span>
           </a>
           <ul class="animated" style="right: 5px">
             <li role="menuitem">
               <h:link outcome="loginTable" rendered="#{engineModeBean.demoOrDesigner}">
-                <i class="material-icons">group</i>
+                <i class="si si-lg si-multiple-neutral-1"></i>
                 <span>Switch user</span>
               </h:link>
             </li>
             <li role="menuitem">
               <h:link outcome="login">
-                <i class="material-icons">vpn_key</i>
+                <i class="si si-lg si-login-3"></i>
                 <span>Login</span>
               </h:link>
             </li>
             <li role="menuitem">
               <p:commandLink id="sessionLogoutBtn" actionListener="#{loginBean.logout}"
                 rendered="#{!ivyJsfWfHelper.sessionUserUnknown}">
-                <i class="material-icons">power_settings_new</i><span>Logout</span>
+                <i class="si si-lg si-logout-1"></i><span>Logout</span>
               </p:commandLink>
             </li>
           </ul>
